[tool.poetry]
name = "mapper"
version = "0.1.0"
description = ""
authors = ["Rafael Sillero <rafael.silnav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
networkx = "^3.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
